--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,22 @@
 ---
+application:
+  tittle: Trabajo Practico Numero 3
+  messages:
+    not_valid: Voucher is not Valid
+    voucher_need: You need a valid Voucher
+    voucher_need_and_id: You need a valid Voucher and ID
+    oops: Ops! Issue with the database connection
+
+
+framework:
+  host: 0.0.0.0
+  port: 8080
+  debug: true
+  reloader: true
+  workers: 5
+
 database:
-  provider: sqlite
-  filename: sqlite.db
+  debug: false
+  engine:
+    provider: sqlite
+    filename: sqlite.db
